Fix & style display of add to cart success message so that buttons don't wrap when there are two

--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -113,6 +113,12 @@ button {
 	text-transform: uppercase;
 }
 
+.message.add-to-cart-response {
+	text-align: center;
+	font-size: 0.8em;
+	margin-top: 0.5rem;
+}
+
 /* Small only */
 @media screen and (max-width: 39.9375em) {
 
